# python-workspace

./: .env  pyproject.toml
src/: live_transcription.py  main.py
src/db/: __init__.py  base.py  utils.py
src/db/models/: Dummy.py  __init__.py
src/services/: dummy.py
workspace/: task.md
